# zzu-2020-ManyPeopleIdentify

multi_recognation/: CMakeLists.txt  package.xml
multi_recognation/include/: port.hpp  recogfile.h  tts.h
multi_recognation/src/: mine.cpp  multi_recognation.cpp  multi_recognation2.cpp  multi_recognation2_depth.cpp  whoiswho.cpp
